fix: overflow in welcomepage

--- a/src/pages/styles/WelcomePage.module.scss
+++ b/src/pages/styles/WelcomePage.module.scss
@@ -44,6 +44,3 @@
   color: #ff0000;
   cursor: pointer;
 }
-
-@media screen {
-}
